# tauri-typegen

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  dependabot-automerge.yml  issue-labeler.yml
src/: models.rs
src/analysis/: ast_cache.rs  command_parser.rs  dependency_graph.rs  event_parser.rs  mod.rs  serde_parser.rs  struct_parser.rs  type_resolver.rs
src/generators/: mod.rs
src/generators/base/: file_writer.rs  mod.rs  template_context.rs  type_visitor.rs
src/generators/ts/: generator.rs
src/generators/ts/templates/: commands.ts.tera  events.ts.tera  index.ts.tera  types.ts.tera
src/generators/ts/templates/partials/: command_function.ts.tera  enum.tera  interface.tera  param_interface.ts.tera
src/generators/zod/: filters.rs  generator.rs  schema_builder.rs  templates.rs  type_visitor.rs
src/generators/zod/templates/: commands.ts.tera  constants.ts.tera  events.ts.tera  types.ts.tera
src/generators/zod/templates/partials/: command_function.ts.tera  enum_schema.ts.tera  event_listener.ts.tera  param_schemas.ts.tera  type_aliases.ts.tera
src/interface/: config.rs  mod.rs
test_ast_cache_27332_1782357042097536300_4/mod/: types.rs
tests/: integration_e2e.rs
tests/common/: mod.rs
tests/regression/: test_backward_compat.rs
