[package]
name = "tauri-typegen"
version = "0.5.2"
authors = [ "Stefan Poindl" ]
description = "A rust crate that automatically generates TypeScript models and bindings from your Tauri commands"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-typegen"
license = "MIT"
repository = "https://github.com/thwbh/tauri-typegen"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = {  version = "1.0", features = ["span-locations"] }
walkdir = "2.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.18"
tera = "1.19"
serde-rename-rule = "0.2.2"

[[bin]]
name = "cargo-tauri-typegen"
path = "src/bin/cargo-tauri-typegen.rs"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
rust-2018-idioms = "deny"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
tempfile = "3.0"
serial_test = "3.0"
